fix: remove bottom margin that causes y overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@ body {
 #__next {
     max-width: 530px;
     margin: 2em auto;
+    margin-bottom: 0;
 }
 
 @for $i from 1 to 7 {
